fixed login screen on mobile view and add more features on readme

--- a/src/pages/Home/styles.module.scss
+++ b/src/pages/Home/styles.module.scss
@@ -45,6 +45,10 @@
       margin-top: 1rem;
       color: var(--content);
     }
+
+    @media (max-width: 414px) {
+      display: none;
+    }
   }
 
   main {
